2010-01-06  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaNPPlugin.h: Remove debug specific line from 
	code.

2010-01-05  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedtea/java/sun/applet/PluginAppletViewer.java
	(handleMessage): Decode URL before setting documentbase.
	(parse): Port over parser fixes from NP plugin tree.
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java
	(handleMessage): Decode URL before setting documentbase.

2009-12-24  Deepak Bhole <dbhole@redhat.com>

	* Makefile.am: Define XP_UNIX, without which critical plugin API
	functions don't get	exported from Mozilla API anymore.
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Update to build with gecko
	1.9.1.5.
	(consume_message): Use calloc instead of malloc.
	(decode_url): Remove function. Rewritten from scratch (this time without
	using any Mozilla code) in IcedTeaPluginUtils.
	(get_scriptable_object): Initialize handle to 0 if not already set.
	(GCJ_SetWindow): Set proper instance id when manipulating height.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: Add temporary
	workaround for chromium which seems to free on calls to
	NPN_PluginThreadAsyncCall.
	* plugin/icedteanp/IcedTeaPluginUtils.cc
	(decodeURL): New function. Decodes an encoded URL.
	* plugin/icedteanp/IcedTeaPluginUtils.h: Added helper macros for
	decodeURL.
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java: Make panel
	visible only if handle is non-zero.
	(parse): Fix regression introduced when fix for Bug# 406 was ported over.
	Normalized default width and height.

2009-12-22  Gary Benson  <gbenson@redhat.com>

	* contrib/checkopts/checkopts.py: New file.
	* contrib/checkopts/Test.java: Likewise.

2009-12-19  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-parisc.patch: Fix sanity check for parisc.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.

2009-12-17  Matthias Klose  <doko@ubuntu.com>

	* patches/cacao/arm-arch-defines.patch: New, fix cacao build on